--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   quick_log: ^1.1.3
   sentry: ">=3.0.0 <4.0.0"
   recase: "^3.0.0"
+  args: ^1.6.0
 #  path: ^1.6.0
 
 dev_dependencies:
