--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   sentry: ">=3.0.0 <4.0.0"
   http2: ^1.0.1
   recase: "^3.0.0"
-  linter: ^0.1.127
+  _fe_analyzer_shared: ^14.0.0
 #  path: ^1.6.0
 
 dev_dependencies:
