--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,6 +5,7 @@ pull_request_rules:
       - base=stable      # Merging into stable
       - -head~=(?i)^hotfix # Name of branch does not start with hotfix
       - -head~=^release # Name of branch does not start with release
+      - -head~=^dev$ # Branch is not dev
     actions:
       close:
         message: "Please ensure that you are merging any non-hotfix branches
