--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,34 +7,49 @@ version: 3.0.1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
-dependencies:
-  args: ^2.2.0
-  archive: ^3.1.2
-  json_serializable: ^3.5.0
-  build_runner: ^1.10.0
-  mockito: ^5.0.7
-  hex: ^0.1.2
-  build: ^1.3.0
-  logger: ^1.1.0
-  uuid: ^3.0.0
-  quick_log: ^1.1.3
-  http2: ^1.0.1
-  recase: "^3.0.0"
-  tuple: ^2.0.0
-  path: ^1.6.0
-  file: ^6.1.2
+dependencies: 
+  args: ^2.3.1
+  directed_graph: ^0.3.7 
   get_it: ^7.2.0
+  hex: ^0.2.0
+  json_serializable: ^6.2.0
+  path: ^1.8.2
+  quick_log: ^5.2.1
+  recase: ^4.0.0
+  sentry: ^6.5.1
+  tuple: ^2.0.0
   pbdl:
-    git:
-      url: https://github.com/Parabeac/pbdl.git
-      ref: master
-  directed_graph: ^0.2.3
-  sentry: ^6.2.2
-  yaml_modify: ^1.0.1
+    path: ../pbdl
+  
+
+
+  # args: ^2.2.0
+  # archive: ^3.1.2
+  # json_serializable: ^4.0.3
+  # # mockito: ^5.0.7
+  # hex: ^0.1.2
+  # # build: ^1.3.0
+  # logger: ^1.1.0
+  # uuid: ^3.0.0
+  # quick_log: ^1.1.3
+  # http2: ^1.0.1
+  # recase: "^3.0.0"
+  # tuple: ^2.0.0
+  # path: ^1.6.0
+  # file: ^6.1.2
+  # get_it: ^7.2.0
+  # pbdl:
+  #   git:
+  #     url: https://github.com/Parabeac/pbdl.git
+  #     ref: master
+  # directed_graph: ^0.3.7
+  # sentry: ^6.2.2
+  # yaml_modify: ^1.0.1
 
 dev_dependencies:
+  build_runner: ^2.1.11
   pedantic: ^1.8.0
   test: ^1.6.0
-  build_config: ^0.4.2
+  build_config: ^1.0.0
 # dependency_overrides:
 #   analyzer: '0.39.14'
