--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   pbdl:
     git:
       url: https://github.com/Parabeac/pbdl.git
-      ref: master
+      ref: hotfix/figma-api-errors
   directed_graph: ^0.2.3
   sentry: ^6.2.2
   yaml_modify: ^1.0.1
